more touches on div arrangement

--- a/blog.html
+++ b/blog.html
@@ -69,10 +69,15 @@
             </div>
                       <div class="other-posts">
 
+                        <p>dummy text</p>
+
+                      </div>
+                      <div class="clearfix">
+
                       </div>
 
                       <div class="author-box">
-        
+                    
                      <p id="author-text">Bryan Hayes</p>
                      <img src="/blog-post/28.jpg" alt="">
                     </div>
